Styling: Fix so username input doesn't zoom in on mobile phones

--- a/prosjekt2/frontend/src/components/Profile/Profile.css
+++ b/prosjekt2/frontend/src/components/Profile/Profile.css
@@ -43,6 +43,7 @@
 	padding: 5px;
 	margin-right: 5px;
 	background-color: white;
+    font-size: 16px;
 }
 
 .profile-icon {
